--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             width: 0px;
             height: 0px;
             border-style: solid;
-            border-width: 20px 0 20px 40px;
+            border-width: 2vh 0 2vh 4vh;
             border-color: transparent transparent transparent #030303;
             transform: rotate(0deg);
         }
@@ -50,7 +50,7 @@
 
     <div style="width: 100%; height:7%; position: absolute; right: 0; bottom: 0; left: 0; top:0; margin-top: 5%; font-size: 3vh; display: flex; justify-content: center; align-items: center;">
         <p class="thames" id="dayNow" style="color:030303; margin-right: 1vw;">Monday</p>
-        <div style="height: 5px; background-color: #030303; width: 50vw;"></div>
+        <div style="height: 0.3vw; background-color: #030303; width: 50vw;"></div>
         <div class="triangle"></div>
         <p class="thames" id="dayTomorrow" style="color:030303; margin-left: 1vw;">Tuesday</p>
     </div>
