--- a/index.html
+++ b/index.html
@@ -36,23 +36,38 @@
             border-color: transparent transparent transparent #030303;
             transform: rotate(0deg);
         }
+
+        #warning-message { display: none; }
+        @media only screen and (orientation:portrait){
+            #wrapper { display:none; }
+            #warning-message { display:block; }
+        }
+        @media only screen and (orientation:landscape){
+            #warning-message { display:none; }
+            ::-webkit-scrollbar {
+                -webkit-appearance: none;
+            }
+        }
     </style>
 </head>
 <body style="background-color: #fcfbfc; overflow: hidden;">
-    <div style="background-color: #030303; width: 100%; height: 10%;  top: 0; right: 0; bottom: 0; left: 0; position: absolute;"></div>
-    <div style="background-color: #030303; width: 100%; height: 10%; right: 0; bottom: 0; left: 0; position: absolute;"></div>
-    <div style="height:100%; position: absolute; display: flex; align-items: center; margin-left: 2%;">
-            <p style="color:#030303; font-size: 15vh;" class="thames">You've gone through <br> <span><a id="per">0</a></span>% <br> of the day.</p>
-    </div>
-    <div style="width: 100%; position: absolute; right: 0; bottom: 0; left: 0; margin-bottom: 5%; font-size: 3vh;">
-        <p class="thames marquee" style="color:030303; white-space: pre;">Why spend your time sleeping?   ●   Wake up, get up, get out there.   ●   No point in being idle all day.   ●   "If you live each day as if it were your last, someday you'll be right." - Steve Jobs</p>
-    </div>
+    <p style="position: absolute;" class="thames">portrait mode disabled</p>
+    <div id="wrapper">
+        <div style="background-color: #030303; width: 100%; height: 10%;  top: 0; right: 0; bottom: 0; left: 0; position: absolute;"></div>
+        <div style="background-color: #030303; width: 100%; height: 10%; right: 0; bottom: 0; left: 0; position: absolute;"></div>
+        <div style="height:100%; position: absolute; display: flex; align-items: center; margin-left: 2%;">
+                <p style="color:#030303; font-size: 15vh;" class="thames">You've gone through <br> <span><a id="per">0</a></span>% <br> of the day.</p>
+        </div>
+        <div style="width: 100%; position: absolute; right: 0; bottom: 0; left: 0; margin-bottom: 5%; font-size: 3vh;">
+            <p class="thames marquee" style="color:030303; white-space: pre;">Why spend your time sleeping?   ●   Wake up, get up, get out there.   ●   No point in being idle all day.   ●   "If you live each day as if it were your last, someday you'll be right." - Steve Jobs</p>
+        </div>
 
-    <div style="width: 100%; height:7%; position: absolute; right: 0; bottom: 0; left: 0; top:0; margin-top: 5%; font-size: 3vh; display: flex; justify-content: center; align-items: center;">
-        <p class="thames" id="dayNow" style="color:030303; margin-right: 1vw;">Monday</p>
-        <div style="height: 0.3vw; background-color: #030303; width: 50vw;"></div>
-        <div class="triangle"></div>
-        <p class="thames" id="dayTomorrow" style="color:030303; margin-left: 1vw;">Tuesday</p>
+        <div style="width: 100%; height:7%; position: absolute; right: 0; bottom: 0; left: 0; top:0; margin-top: 5%; font-size: 3vh; display: flex; justify-content: center; align-items: center;">
+            <p class="thames" id="dayNow" style="color:030303; margin-right: 1vw;">Monday</p>
+            <div style="height: 0.3vw; background-color: #030303; width: 50vw;"></div>
+            <div class="triangle"></div>
+            <p class="thames" id="dayTomorrow" style="color:030303; margin-left: 1vw;">Tuesday</p>
+        </div>
     </div>
 
     <script>
